# hello_agents

aidb/: .dockerignore  .gitattributes  .gitignore  Aix-DB后端接口文档.md  Makefile  dev.txt  pyproject.toml  requirements.txt  serv.py  对话服务接口文档.md  记录.txt
aidb/agent/: common_react_agent.py
aidb/agent/deepagent/: AGENTS.md  deep_research_agent.py
aidb/agent/deepagent/tools/: __init__.py  native_sql_tools.py  tool_call_manager.py
aidb/agent/excel/: early_recommender_helper.py  excel_agent.py  excel_agent_state.py  excel_chart_generator.py  excel_data_render_antv.py  excel_data_render_apache.py  excel_duckdb_manager.py  excel_excute_sql.py  excel_graph.py  excel_mapping_node.py  excel_question_recommender.py  excel_sql_node.py  excel_summarizer.py  parallel_collector.py  unified_collector.py
aidb/agent/excel/template/: __init__.py  prompt_builder.py  schema_formatter.py  template_loader.py
aidb/agent/mcp/: auth.py  mcp_server.py
aidb/agent/memory/: __init__.py  manager.py  prompt_injector.py  store.py
aidb/agent/middleware/: customer_middleware.py
aidb/agent/text2sql/: text2_sql_agent.py
aidb/agent/text2sql/analysis/: data_render_antv.py  data_render_apache.py  early_recommender_helper.py  graph.py  llm_summarizer.py  parallel_collector.py  (+1 more)
aidb/common/: datasource_util.py  date_util.py  exception.py  initialize_mysql.py  llm_util.py  local_embedding.py  mcp_client.py  minio_util.py  param_parser.py  permission_util.py  res_decorator.py  route_utility.py  token_decorator.py
aidb/config/: load_env.py  logging.conf
aidb/constants/: code_enum.py
aidb/controllers/: aimodel_api.py  data_training_api.py  datasource_api.py  db_chat_api.py  embedding_migration_api.py  file_chat_api.py  llm_chat_api.py  permission_api.py  skill_api.py  terminology_api.py  user_rest_api.py
aidb/model/: __init__.py  datasource_models.py  db_connection_pool.py  db_models.py  schemas.py  serializers.py
aidb/scripts/: housekeeping_db.sql  housekeeping_db_pg.sql  init_mem.sql  init_sql.sql  pg_test.sql  start_mcp.sh
aidb/services/: aimodel_service.py  data_training_service.py  datasource_service.py  db_qadata_process.py  embedding_migration_service.py  embedding_service.py  file_chat_service.py  llm_service.py  permission_service.py  terminology_service.py  text2_sql_service.py  user_service.py
aidb/tests/mcp/: test_auth.py
aidb/web/: .dockerignore  .eslintrc-auto-import.json  .gitignore  .stylelintrc.cjs  Makefile  auto-imports.d.ts  babel.config.cjs  components-instance.d.ts  components.d.ts  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
aidb/web/docker/: Dockerfile
aidb/web/src/: App.vue  NaiveProvider.vue  env.d.ts  main.ts
(+151 files in other folders)
