[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    { name = "weber_001", email = "343397495@qq.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"


dependencies = [
    "sanic>=25.0.0,<25.4.0",
    "sqlalchemy>=2.0.31,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "redis>=5.0.7,<6.0.0",
    "pytest>=8.3.2,<9.0.0",
    "numpy==1.26.4",
    "pyyaml>=6.0.1,<7.0.0",
    "duckdb>=1.0.0,<2.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "pdfplumber>=0.11.3,<0.12.0",
    "python-docx>=1.1.2,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "minio>=7.2.8,<8.0.0",
    "pyjwt>=2.9.0,<3.0.0",
    "bs4>=0.0.2,<0.1.0",
    "sanic-ext>=24.0.0,<=24.12.0",
    "mammoth>=1.9.0,<2.0.0",
    "markdownify>=0.14.1,<0.15.0",
    "pymupdf>=1.25.2,<2.0.0",
    "beautifulsoup4>=4.13.3,<5.0.0",
    "lxml>=5.3.1,<6.0.0",
    "psycopg2-binary>=2.9.9",
    "oracledb>=2.0.0",
    "pymssql>=2.2.11",
    "clickhouse-driver>=0.2.7",
    "pycryptodome>=3.23.0",
    "mcp>=1.12.2",
    "openai>=1.97.0",
    "langchain>=1.2.7",
    "langgraph>=1.0.7",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-community>=0.3.27",
    "sqlacodegen>=3.1.0",
    "pydantic>=2.11.7",
    "sqlglot>=27.8.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "mkdocs-static-i18n>=1.3.0",
    "py2neo>=2021.2.4",
    "langchain-chroma>=0.2.5",
    "langchain-tavily>=0.2.11",
    "pymupdf4llm>=0.0.27",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "colorlog>=6.9.0",
    "faiss-cpu>=1.12.0",
    "tavily-python",
    "langchain-ollama>=1.0.0a1",
    "dashscope>=1.25.0",
    "langchain-openai>=1.0.2",
    "langgraph-cli[inmem]>=0.4.7",
    "langfuse>=3.10.0",
    "yfinance>=0.2.66",
    "anthropic>=0.75.0",
    "claude-agent-sdk>=0.1.16",
    "pymysql>=1.1.2",
    "pgvector>=0.4.2",
    "langchain-huggingface>=1.2.0",
    "sentence-transformers>=5.2.0",
    "elasticsearch==8.17.1",
    "redshift-connector==2.1.4",
    "clickhouse-sqlalchemy==0.3.2",
    "deepagents>=0.3.12",
    "langmem>=0.0.30",
    "langgraph-checkpoint-postgres>=3.0.5",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true


# ⚠️ 注意：添加新依赖时，请使用：
# uv add <package> --frozen
# 以防止意外升级已有依赖版本。
# uv 不会在配置中自动阻止升级行为。

# 固定版本避免了依赖版本升级带来的问题。
# uv pip freeze > requirements.txt

[tool.pytest.ini_options]
pythonpath = ["."]

# Black 代码格式化配置
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''
